--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^15.2.0",
+    "@react-native-firebase/auth": "^15.2.0",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "axios": "^0.27.2",
@@ -17,6 +19,7 @@
     "expo-app-loading": "~2.0.0",
     "expo-font": "~10.1.0",
     "expo-status-bar": "~1.3.0",
+    "firebase": "^9.9.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
