--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -256,6 +256,9 @@ android {
 }
 
 dependencies {
+    implementation 'com.facebook.fresco:fresco:2.6.0'
+    implementation 'com.facebook.fresco:animated-gif:2.6.0'
+    
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
     //noinspection GradleDynamicVersion
