first request to marvel api is done

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@react-navigation/stack": "^6.2.2",
-    "pod": "^0.9.0",
+    "axios": "^0.27.2",
+    "md5": "^2.3.0",
     "react": "18.0.0",
     "react-native": "0.69.3",
     "react-native-gesture-handler": "^2.5.0",
