--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^6.2.2",
     "axios": "^0.27.2",
     "md5": "^2.3.0",
+    "pretty-format": "^28.1.3",
     "react": "18.0.0",
     "react-native": "0.69.3",
     "react-native-gesture-handler": "^2.5.0",
